--- a/src/app/main/quick-panel/quick-panel.component.html
+++ b/src/app/main/quick-panel/quick-panel.component.html
@@ -74,7 +74,7 @@
 	<mat-list class="date" cdkFocusRegionStart>
 
 		<h3 matSubheader cdkFocusInit>
-			<span>Hari ini</span>
+			<span>{{ ls.locale.global.label.today }}</span>
 		</h3>
 
 		<div class="secondary-text mat-display-1 mb-0 p-16">
@@ -94,7 +94,7 @@
 	<mat-list *ngIf="listNotif">
 		<h3 matSubheader>
 			<span class="text-bold" *ngIf="listNotif.length === 0">Belum ada notifikasi</span>
-			<span class="text-bold" *ngIf="listNotif.length > 0">Notifikasi</span>
+			<span class="text-bold" *ngIf="listNotif.length > 0">{{ ls.locale.notification.text }}</span>
 		</h3>
 
 		<mat-list-item *ngFor="let item of listNotif" (click)="directNotif(item)" class="hover" style="margin-bottom: 15px;">
