--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -123,7 +123,7 @@
                 <div *ngIf="files">
                   <div class="mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
                     role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span
-                      class="preview-image-content" (click)="previewImage()">Lihat gambar popup notifikasi</span>
+                      class="preview-image-content" (click)="previewImage(imageConverted)">Lihat gambar popup notifikasi</span>
                     <mat-icon (click)="removeImage()" matTooltip="Hapus gambar"
                       class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                       matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
@@ -324,6 +324,77 @@
               <mat-radio-button class="radio-button" value="yes">Ya</mat-radio-button>
               <mat-radio-button class="radio-button" value="no">Tidak</mat-radio-button>
             </mat-radio-group>
+          </div>
+
+          <!-- Image -->
+          <div class="px-24 pb-16" *ngIf="formPopupGroup.get('user_group').value === 'customer' && formPopupGroup.get('content_type').value === 'image'">
+            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
+              <div ngfDrop selectable="1" [(validDrag)]="validDragContentImage" [(file)]="fileContentImage" accept="image/*"
+                class="well my-drop-zone" [class.invalid-drag]="validDragContentImage === false"
+                [class.valid-drag]="validDragContentImage" (fileChange)="fileChangeContentImage($event)">
+                Tarik gambar kesini atau <strong>pilih file</strong>
+              </div>
+              <mat-chip-list *ngIf="fileContentImage">
+                <mat-chip style="position:unset;margin:0;" (click)="previewImage(convertedContentImage)" [removable]="true" (removed)="fileContentImage=undefined">
+                  <span>Lihat Gambar</span>
+                  <mat-icon style="padding:0;" matChipRemove>cancel</mat-icon>
+                </mat-chip>
+              </mat-chip-list>
+            </div>
+          </div>
+
+          <!-- link to web browser -->
+          <div class="px-24" *ngIf="formPopupGroup.get('user_group').value === 'customer' && formPopupGroup.get('content_type').value === 'link_to_web_browser'">
+            <div class="" fxLayout="row" fxLayoutAlign="start center">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <input matInput type="url" formControlName="url_web" placeholder="URL Link">
+                <mat-error
+                  *ngIf="formPopupGroup.controls['url_web'].hasError('required') && formPopupGroup.controls['url_web'].touched">
+                  URL harus diisi
+                </mat-error>
+                <mat-error
+                  *ngIf="formPopupGroup.controls['url_web'].hasError('pattern') && formPopupGroup.get('url_web').value !== ''">
+                  URL tidak valid
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <!-- E-Wallet -->
+          <div class="pb-24 px-24" *ngIf="formPopupGroup.get('user_group').value === 'customer' && formPopupGroup.get('content_type').value === 'e_wallet'">
+            <div class="" fxLayout="row" fxLayoutAlign="start center">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <mat-select formControlName="content_wallet" placeholder="Tipe Wallet">
+                  <mat-option *ngFor="let item of listContentWallet" [value]="item.id">{{item.app_name}}</mat-option>
+                </mat-select>
+                <mat-error
+                *ngIf="formPopupGroup.get('content_wallet').hasError('required') && formPopupGroup.get('content_wallet').touched">
+                  Tipe Wallet harus diisi
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div class="" fxLayout="row" fxLayoutAlign="start center">
+              <mat-form-field fxFlex="45" class="is-light form-primary">
+                <input matInput type="text" formControlName="button_text" placeholder="Teks Button">
+                <mat-error
+                  *ngIf="formPopupGroup.get('button_text').hasError('required') && formPopupGroup.get('button_text').touched">
+                  Teks Button harus diisi
+                </mat-error>
+                <mat-error
+                  *ngIf="formPopupGroup.get('button_text').hasError('maxlength') && formPopupGroup.get('button_text').touched">
+                  Teks Button Maksimal 30 karakter
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div class="" fxLayout="row" fxLayoutAlign="start center">
+              <h3 class="">Isi Halaman</h3>
+            </div>
+            <textarea [froalaEditor]="options" formControlName="body_wallet" class="pb-4"
+              fxFlex="100"></textarea>
+            <mat-error style="padding-top: 6px !important; font-size: .86em;"
+              *ngIf="formPopupGroup.get('body_wallet').hasError('required') && formPopupGroup.get('body_wallet').touched">
+              Isi Halaman harus diisi
+            </mat-error>
           </div>
 
           <!-- Retailer -->
