CDE-3881-private-label-voucher: - add new field 'nama supplier' inject b2b voucher on create, edit, detail - search option nama supplier - fetch product by supplier id (on create,edit,detail inject b2b voucher) - fetch category by supplier id (on create,edit,detail inject b2b voucher) - new column amount, nominal in import panel dialog preview table - new fields amount, nominal on save import panel mitra (inject b2b voucher) - new column 'Penggunaan Voucher' in table (index inject b2b voucher) - filter by Penggunaan Voucher in table index inject b2b voucher

--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -37,8 +37,13 @@
 
                 <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center" *ngIf="(formDetilVoucher.get('opsiVoucher').value === 'private-label')">
                   <mat-form-field fxFlex="100">
-                    <mat-select placeholder="Nama Supplier" formControlName="supplier">
-                      <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id">{{ supplier.name }}</mat-option>
+                    <mat-select placeholder="Nama Supplier" formControlName="supplier_company_id">
+                      <mat-option>
+                        <ngx-mat-select-search [formControl]="filterSupplier" placeholderLabel="Cari Supplier..."></ngx-mat-select-search>
+                      </mat-option>
+                      <mat-option *ngFor="let item of filteredSupplier | async" [value]="item.id">
+                        {{item.name}}
+                      </mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
@@ -218,7 +223,7 @@
             [permissions]="permission">
           </app-panel-mitra-voucher>
         </mat-tab>
-        <mat-tab label="Panel Retailer" *ngIf="isDetail || isEdit">
+        <mat-tab label="Panel Retailer" *ngIf="(isDetail || isEdit) && formDetilVoucher.get('opsiVoucher').value !== 'private-label'">
           <div class="ayo-middle p-24" fxLayout="column">
             <div>
               <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
