--- a/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
+++ b/src/app/pages/b2b-voucher-inject/index/b2b-voucher-inject.component.html
@@ -13,7 +13,21 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Inject B2B Voucher</h2>
+        <div fxLayout="row" fxFlex="60">
+          <h2 class="pl-8">Inject B2B Voucher</h2>
+        
+          <div class="pl-16" fxFlex="60" fxLayoutAlign="start center" [formGroup]="formFilter">
+            
+              <mat-form-field fxFlex="100">
+                <mat-select placeholder="Penggunaan Voucher" formControlName="type">
+                  <mat-option *ngFor="let ops of opsiVoucherList" [value]="ops.value"><strong>{{ ops.name }}</strong></mat-option>
+                </mat-select>
+              </mat-form-field>
+
+          </div>
+
+        </div>
+        
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -29,6 +43,13 @@
         <ngx-datatable-column name="Nama Voucher" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a>
+          </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Penggunaan Voucher" prop="type_indo">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <!-- <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a> -->
+            {{row.type_indo}}
           </ng-template>
         </ngx-datatable-column>
 
