--- a/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
+++ b/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
@@ -86,6 +86,8 @@
             <th nowrap>Owner</th>
             <th nowrap>Tipe</th>
             <th nowrap>Klasifikasi</th>
+            <th nowrap>Nominal</th>
+            <th nowrap>Amount</th>
           </tr>
         </thead>
         <tbody>
@@ -104,6 +106,12 @@
             </td>
             <td nowrap>
               {{ item.type ? item.type : '-' }}
+            </td>
+            <td nowrap>
+              {{ item.nominal ? item.nominal : '-' }}
+            </td>
+            <td nowrap>
+              {{ item.amount ? item.amount : '-' }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
