changing classification edit type into dropdown

--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -28,7 +28,9 @@
             <input matInput placeholder="Apps Version" formControlName="version">
           </mat-form-field>
           <mat-form-field fxFlex="50" class="is-light px-24">
-            <input matInput placeholder="Classification" formControlName="classification">
+            <mat-select placeholder="Classification" formControlName="classification">
+              <mat-option [value]="classification.name" *ngFor="let classification of listClassification">{{classification.name}}</mat-option>
+            </mat-select>
           </mat-form-field>
 
           <div class="" formArrayName="wilayah" *ngFor="let wil of formFF.get('wilayah')['controls']; let i = index;">
