Fix filter consumer_subscriptions and employee filter for sfmc

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -413,7 +413,7 @@
               </mat-radio-button>
             </mat-radio-group>
           </div>
-          <div class="pb-16" *ngIf="formNotification.controls['user_group'].value === 'customer' && formNotification.controls['send_ayo'].value">
+          <div class="pb-16" *ngIf="formNotification.controls['user_group'].value === 'customer'">
             <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
                 <strong>Employee</strong>
